welcome.lessons.welcome.bat.bool1.MonkeyTrouble.scala.error
monkeyTrouble:3: error: 'case' expected but '(' found.
    (true,true) => true ;
    ^monkeyTrouble:3: error: '}' expected but ';' found.
    (true,true) => true ;
                        ^monkeyTrouble:4: error: not a legal formal parameter.
Note: Tuples cannot be directly destructured in method or function parameters.
      Either create a single parameter accepting the Tuple1,
      or consider a pattern matching anonymous function: `{ case (param1, param1) => ... }
    (false,false) => true ;
     ^monkeyTrouble:7: error: eof expected but '}' found.
 }
 ^